infra/eks/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ethos-cand-lucio-o-dev
  labels:
    ethos.candidate: lucio-o-dev
    ethos.project: devops-test
